Closed Bug 980052 Opened 10 years ago Closed 10 years ago

Crash in mozilla::MediaStreamGraphImpl::RunThread() while receiving calls and sms

Categories

(Core :: Audio/Video, defect)

28 Branch
ARM
Gonk (Firefox OS)
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla30
blocking-b2g 1.3+
Tracking Status
firefox28 --- wontfix
firefox29 --- fixed
firefox30 --- fixed
b2g-v1.3 --- fixed
b2g-v1.3T --- fixed
b2g-v1.4 --- fixed

People

(Reporter: ggrisco, Assigned: padenot)

Details

(Keywords: crash, Whiteboard: [b2g-crash][caf-crash 49][caf priority: p2][CR 626053])

Attachments

(3 files)

Similar stack trace to bug 947431:

Test steps:
1. Run a script with Call, SMS, camcorder, Music , Video and camera test cases.
2. After Day and night run, mini dumps are generated in the phone.
blocking-b2g: --- → 1.3?
Attached file EXTRA file attachment
This happened once so far on a 1.3 build that was made on 2/26/2014.
Component: General → Video/Audio
Product: Firefox OS → Core
Version: unspecified → 28 Branch
blocking-b2g: 1.3? → 1.3+
PM Triage: 1.3 stability needs to reach target MTBFs. Stays 1.3+
Hema, is this your team or media recording?
Flags: needinfo?(hkoka)
Don't have experts in media apps team; Media recording guys are probably the best to take a look at this 

thanks
hema
Flags: needinfo?(hkoka) → needinfo?(cku)
Assignee: nobody → paul
Attachment #8388922 - Flags: review?(kinetik) → review+
https://hg.mozilla.org/mozilla-central/rev/61a399044b5a
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Please nominate this for approval-mozilla-b2g28 when you get a chance. Also, is this something !B2G would benefit from on Aurora29?
Flags: needinfo?(paul)
Please request approval per form

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 
User impact if declined: 
Testing completed: 
Risk to taking this patch (and alternatives if risky): 
String or UUID changes made by this patch:
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #9)
> Please nominate this for approval-mozilla-b2g28 when you get a chance. Also,
> is this something !B2G would benefit from on Aurora29?

Will do. This code is also used on Android > 2.3, although triggering the bug would be extremely difficult. Since this patch is trivial, I'll nominate it as well.
Flags: needinfo?(paul)
Comment on attachment 8388922 [details] [diff] [review]
Compare the value and not the pointer when checking validity of the preferred sample rate in the OpenSL cubeb backend.

[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 947431
User impact if declined: crash because of division by zero exception
Testing completed: this is a very obvious programming error
Risk to taking this patch (and alternatives if risky): little risk, this is very obvious. Alternative is having a crash.
String or UUID changes made by this patch: none
Attachment #8388922 - Flags: approval-mozilla-b2g28?
Attachment #8388922 - Flags: approval-mozilla-aurora?
Attachment #8388922 - Flags: approval-mozilla-b2g28? → approval-mozilla-b2g28+
Attachment #8388922 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: in-moztrap-
Whiteboard: [CR 626053] → [caf priority: p2][CR 626053]
Observed on: 

Device: 
Gonk Version: AU_LINUX_GECKO_B2G_JB_3.2.01.03.00.112.255
Moz BuildID: 20140226004002
B2G Version: 1.3
Gecko Version: 28.0
Gaia:  http://git.mozilla.org/?p=releases/gaia.git;a=commit;h=8039a5cb7519adfa81677df577f494c6a4de6140
Gecko: http://git.mozilla.org/?p=releases/gecko.git;a=commit;h=7599b5ccc906f556076798fc062a9e51e2c0eece
Whiteboard: [caf priority: p2][CR 626053] → [b2g-crash][caf-crash 49][caf priority: p2][CR 626053]
Keywords: crash
Observed on: 

Device: msm8226
Gonk Version: AU_LINUX_GECKO_B2G_KK_3.6.01.04.00.000.043
Moz BuildID: 20140721000201
B2G Version: 1.3
Gecko Version: 32.0a2
Gaia:  http://git.mozilla.org/?p=releases/gaia.git;a=commit;h=8cb1a949f2e9650bb2c5598e78a6f24a58bbaf97
Gecko: http://git.mozilla.org/?p=releases/gecko.git;a=commit;h=5f27d3ee3ccf01ac91a3efacb5e3e22ea62fd73c
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: