Bug 980052 - Compare the value and not the pointer when checking validity of the preferred sample rate in the OpenSL cubeb backend. r=kinetik